Fix: swagger e api checkin
