# swagger.yaml
@@ -86,6 +86,20 @@ paths:
       responses:
         "200":
           description: Default Response
+  /api/eventi/{id}/iscrizioni:
+    get:
+      tags:
+        - Eventi
+        - Iscrizioni
+      parameters:
+        - schema:
+            type: integer
+          in: path
+          name: id
+          required: true
+      responses:
+        "200":
+          description: Default Response
   /api/iscrizioni/:
     get:
       tags:
@@ -189,7 +203,5 @@ paths:
       responses:
         "200":
           description: Default Response
-servers:
-  - url: http://localhost:3000
 security:
   - bearerAuth: []
